--- a/radar_data.js.liquid
+++ b/radar_data.js.liquid
@@ -1,12 +1,7 @@
 var h = 1000;
 var w = 1450;
 
-var radar_arcs = [
-  {'r': 130, 'name': 'ADOPT'},
-  {'r': 220, 'name': 'TRIAL'},
-  {'r': 310, 'name': 'ASSESS'},
-  {'r': 400, 'name': 'HOLD'}
-];
+var radar_arcs = {{ arcs }};
 
 // movement:
 //   t = moved (triangle)
