--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,7 +8,7 @@ body, html {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color:#efefef;
+  background-color: #e0e0e0;
 }
 
 .radar {
@@ -25,11 +25,11 @@ body, html {
     transition: all 0.5s ease-out;
     text-align: center;
     color: rgba(0, 0, 0, 0.6);
-    z-index: 1;
+    z-index: 100;
     font-size: 8px;
     line-height: 15px;
-    font-weight:700;
-    border:2px solid #f1f1f1;
+    font-weight: 700;
+    border: 2px solid #f1f1f1;
 
     &:hover {
       font-size: 20px;
@@ -49,7 +49,35 @@ body, html {
 
   .ring {
     position: absolute;
-    border:1px solid #999999;
+    border: 1px solid #999999;
+    background-color:rgba(255,255,255,0.2);
+  }
+
+  .quadrants {
+    height: 100%;
+    width: 100%;
+
+
+    .quadrant {
+      position: absolute;
+      z-index:10;
+      background:rgba(0,0,0,0);
+      border: 0 solid rgba(0,0,0,0.2);
+
+      &.active {
+
+      }
+
+      &:nth-child(1) {
+
+      }
+      &:nth-child(2) {
+
+      }
+      &:nth-child(3) {
+
+      }
+    }
   }
 }
 
