--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,39 @@
 @import url('https://fonts.googleapis.com/css?family=Miriam+Libre:400,700');
 
+@font-face {
+  font-family: 'Exo';
+  font-weight: 200;
+  src: url('/css/fonts/Exo-Thin.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Exo';
+  font-weight: 300;
+  src: url('/css/fonts/Exo-Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Exo';
+  font-weight: 400;
+  src: url('/css/fonts/Exo-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Exo';
+  font-weight: 500;
+  src: url('/css/fonts/Exo-Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Exo';
+  font-weight: 800;
+  src: url('/css/fonts/Exo-Black.ttf') format('truetype');
+}
+
+
 * {
-  font-family: 'Miriam Libre', sans-serif;
+  font-family: 'Exo', 'Arial';
+  font-weight: 400;
 }
 
 body, html {
@@ -15,19 +47,20 @@ body, html {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  box-shadow: inset 0px 0px 200px rgba(0, 0, 0, 0.3);
 
   .dot {
     position: absolute;
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 20px;
     text-align: center;
     color: rgba(0, 0, 0, 0.6);
     z-index: 100;
-    font-size: 8px;
-    line-height: 15px;
-    font-weight: 700;
+    font-size: 10px;
+    line-height: 20px;
+    font-weight: 500;
     border: 2px solid #f1f1f1;
     overflow: inherit;
 
@@ -115,6 +148,85 @@ body, html {
       &:nth-child(3) {
 
       }
+    }
+  }
+
+  .legends {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+    .legend {
+      position: absolute;
+
+      h1, h2, ul, li {
+        margin: 0;
+        padding: 0;
+        display: block;
+      }
+
+      h1 {
+        font-size: 20px;
+      }
+
+      h2 {
+        font-size: 14px;
+        margin-top: 10px;
+      }
+
+      ul {
+        li {
+          font-size: 10px;
+          list-style: none;
+          display: block;
+          line-height: 14px;
+
+          a {
+
+            span {
+              width: 15px;
+              overflow: hidden;
+              display: block;
+              float: left;
+              color: #aaaaaa;
+              margin-right: 5px;
+              font-weight: 700;
+            }
+
+            color: #000000;
+            text-decoration: none;
+          }
+        }
+      }
+
+      .label-container {
+        .ring-column {
+          width: 50%;
+          float: left;
+
+          .ring-block {
+
+          }
+        }
+
+      }
+
+      &[data-ring] {
+        width: 300px;
+        height: 400px;
+        margin-top: 100px;
+      }
+
+      &[data-ring="1"], &[data-ring="3"] {
+        left: 30px;
+      }
+
+      &[data-ring="0"], &[data-ring="2"] {
+        right: 30px;
+      }
+
     }
   }
 }
