legend no cursor

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -213,7 +213,10 @@ body, html {
             &.active {
               font-weight:900;
               transition:all 0.2s;
+              cursor:none;
             }
+
+
           }
         }
       }
