css change ring size, lines setup

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -226,6 +226,7 @@ body, html {
 
           a {
             padding: 2px 4px 2px 4px;
+            font-weight:500;
 
             span {
               width: 15px;
