--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,9 +1,7 @@
 @import "./mixins/responsive.scss";
 @import "./mixins/typo.scss";
 
-/**
-change the ring size here, means percent
- */
+// change the ring size here. 0 = 0% , 1 = 100%
 :root {
   --radar-ring-0: 0.37;
   --radar-ring-1: 0.55;
@@ -11,273 +9,20 @@ change the ring size here, means percent
   --radar-ring-3: 0.82;
 }
 
-* {
-  font-family: 'Exo', 'Arial';
-  font-weight: 400;
-}
-
-body, html {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #e0e0e0;
-}
-
-.splash {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 1;
-
-}
-
-.header {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  text-align: center;
-  z-index:20000;
-
-  a {
-    text-decoration: none;
-    color: white;
-  }
-
-  .company {
-    color: white;
-    background-color: #E60023;
-    font-weight: 500;
-    padding: 5px 20px;
-    font-size: 16px;
-    font-style: italic;
-    text-shadow: 0 0 20px white;
-    display: inline-block;
-    box-shadow:0 -20px 50px rgba(255,0,0,0.6);
-
-    .claim {
-      margin-left: 5px;
-      color: #dddddd;
-    }
-  }
-}
+@import "./components/base.scss";
+@import "./components/splash.scss";
+@import "./components/header.scss";
 
 .radar {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  //min-height: 800px;
-  //max-height: 800px;
   box-shadow: inset 0 0 200px rgba(0, 0, 0, 0.3);
   z-index: 2;
 
-  .dot {
-    position: absolute;
-    display: block;
-    font-size: 11px;
-    width: 22px;
-    height: 22px;
-    line-height: 22px;
-    overflow: hidden;
-    border-radius: 20px;
-    text-align: center;
-    color: rgba(0, 0, 0, 0.6);
-    z-index: 500;
-
-    font-weight: 500;
-    border: 2px solid #f1f1f1;
-    overflow: inherit;
-    transform-origin: center center;
-
-    transition-property: font-size, line-height, width, height, margin-left, margin-top, border-radius;
-    transition-duration: .1s;
-    transition-timing-function: ease-in-out;
-
-    @include media-tablet {
-      width: 15px;
-      height: 15px;
-      border-width: 1px;
-      line-height: 15px;
-      font-size: 9px;
-    }
-
-    &:before {
-      position: absolute;
-      content: attr(data-quadrant);
-      left: 0;
-      top: 50px;
-      text-transform: uppercase;
-      width: 200px;
-      transition: all 0.2s;
-      text-align: center;
-    }
-
-
-    &.active {
-      font-size: 20px;
-      line-height: 43px;
-      cursor: pointer;
-      width: 200px;
-      height: 50px;
-      margin-left: -100px;
-      margin-top: -25px;
-      vertical-align: middle;
-      z-index: 2000;
-      box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
-      border-radius: 30px;
-
-      &:before {
-        position: absolute;
-        top: 15px;
-        font-size: 10px;
-        transition: all 0.2s;
-        transition-delay: 0.1s;
-        width: 200px;
-      }
-    }
-  }
-
-  .ring {
-    position: absolute;
-    border: 1px solid #999999;
-    background-color: rgba(255, 255, 255, 0.2);
-
-    &:before {
-      position: absolute;
-      content: attr(data-name);
-      text-align: center;
-      width: 100%;
-      font-size: 40px;
-      font-weight: 700;
-      z-index: 10;
-      opacity: 0.2;
-      top: 5px;
-    }
-  }
-
-  .quadrants {
-    height: 100%;
-    width: 100%;
-
-    .quadrant {
-      position: absolute;
-      z-index: 10;
-      background: rgba(0, 0, 0, 0);
-      border: 0 solid rgba(0, 0, 0, 0.2);
-
-      &.active {
-
-      }
-
-      &:nth-child(1) {
-
-      }
-
-      &:nth-child(2) {
-
-      }
-
-      &:nth-child(3) {
-
-      }
-    }
-  }
-
-  .legends {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 100;
-
-    @include media-tablet {
-      display: none;
-    }
-
-
-    .legend {
-      position: absolute;
-      margin-top: 10px;
-
-      h1, h2, ul, li {
-        margin: 0;
-        padding: 0;
-        display: block;
-      }
-
-      h1 {
-        font-size: 20px;
-        font-weight: 600;
-      }
-
-      h2 {
-        font-size: 14px;
-        margin-top: 10px;
-      }
-
-      ul {
-        li {
-          font-size: 10px;
-          list-style: none;
-          display: block;
-          line-height: 14px;
-
-          a {
-            padding: 2px 4px 2px 4px;
-            font-weight:500;
-
-            span {
-              width: 15px;
-              overflow: hidden;
-              display: block;
-              float: left;
-              color: #aaaaaa;
-              margin-right: 5px;
-              font-weight: 700;
-            }
-
-            color: #000000;
-            text-decoration: none;
-
-            &.active {
-              font-weight: 900;
-              transition: all 0.2s;
-              cursor: none;
-            }
-
-
-          }
-        }
-      }
-
-      .label-container {
-
-        .ring-column {
-          width: 50%;
-          float: left;
-
-          .ring-block {
-          }
-        }
-
-      }
-
-      &[data-ring] {
-        width: 300px;
-        height: 400px;
-      }
-
-      &[data-ring="1"], &[data-ring="2"] {
-        margin-left: -700px;
-      }
-
-      &[data-ring="0"], &[data-ring="3"] {
-        margin-left: 450px;
-      }
-
-    }
-  }
+  @import "./components/dot.scss";
+  @import "./components/ring.scss";
+  @import "./components/quadrants.scss";
+  @import "./components/legends.scss";
 }
 
