--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -12,19 +12,38 @@ body, html {
 
 body {
   &:before {
-    content: 'loading...';
+
     position: absolute;
-    opacity:0;
+    opacity: 0;
     top: 50%;
     left: calc(50% - 30px);
-    transition:opacity 1s ease-in-out;
-    z-index:10000;
+    transition: opacity 1s ease-in-out;
+    z-index: 10000;
   }
+
   &.loading {
     &:before {
-      opacity:1;
-      transition:opacity 1s ease-in-out;
+      content: 'loading...';
+      opacity: 1;
+      transition: opacity 1s ease-in-out;
 
     }
   }
+
+  &.resizing {
+    &:before {
+      content: 'resizing...';
+      opacity: 1;
+      transition: opacity 1s ease-in-out;
+
+    }
+
+    .radar {
+      opacity: 0;
+      box-shadow: inset 0 0 200px rgba(0, 0, 0, 0);
+      transition: all .2s ease-in-out;
+
+    }
+  }
+
 }
