--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -24,7 +24,7 @@
     font-weight: 500;
     font-size: 16px;
     font-style: italic;
-    text-shadow: 0 0 20px white;
+    text-shadow:1px 1px rgba(0,0,0,0.3);
     display: inline-block;
     box-shadow: 0 -20px 50px rgba(255, 0, 0, 0.6);
     padding-top: 0;
