--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,6 +12,7 @@
 @import "./components/base.scss";
 @import "./components/splash.scss";
 @import "./components/header.scss";
+@import "./components/menu.scss";
 
 .radar {
   width: 100%;
