theme-ing per config

--- a/src/scss/components/dot.scss
+++ b/src/scss/components/dot.scss
@@ -12,7 +12,7 @@
   z-index: 500;
 
   font-weight: 500;
-  border: 2px solid #f1f1f1;
+  border: 2px solid $color-high;
   overflow: inherit;
   transform-origin: center center;
 
