--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -7,7 +7,7 @@ body, html {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #e0e0e0;
+  background-color: $color-chalk;
 }
 
 body {
