--- a/src/scss/components/ring.scss
+++ b/src/scss/components/ring.scss
@@ -1,6 +1,6 @@
 .ring {
   position: absolute;
-  border: 1px solid #999999;
+  border: 1px solid $color-dark;
   background-color: rgba(255, 255, 255, 0.2);
 
   &:before {
