--- a/src/scss/forest.scss
+++ b/src/scss/forest.scss
@@ -22,8 +22,13 @@ body {
 }
 
 .radar {
+  background-image: url("/images/bg_forest.jpg");
+  background-size: cover;
+  box-shadow: inset 0 0 200px rgba(0, 0, 0, 1);
+
   .dot {
     border: none;
+
     &.active {
       border-radius: 0;
 
@@ -33,11 +38,43 @@ body {
 
   .legends {
     .legend {
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.2);
+      text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
+      
+      &[data-ring="0"] {
+        transform-origin: left top;
+        transform: translate(450px, 0);
+      }
+
+      &[data-ring="1"] {
+        transform-origin: right top;
+        transform: translate(-800px, 0);
+      }
+
+      &[data-ring="2"] {
+        transform-origin: right bottom;
+        transform: translate(-800px, 0);
+      }
+
+      &[data-ring="3"] {
+        transform-origin: left bottom;
+        transform: translate(450px, 0);
+      }
+
       ul {
         li {
           a {
+            text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
+
             &.active {
               color: $color-chalk;
+              text-shadow: none;
+            }
+
+            span {
+              color: $color-foreground;
+              font-weight:800;
             }
           }
         }
@@ -46,7 +83,7 @@ body {
   }
 
   .ring {
-    background-color: rgba(50, 80, 100, 0.2);
+    background-color: rgba(100, 80, 20, 0.2);
     border: 1px solid $color-dark;
 
     &:before {
