--- a/src/scss/mixins/colors.scss
+++ b/src/scss/mixins/colors.scss
@@ -6,4 +6,5 @@ $color-foreground: #444444;
 $color-high: #ffffff;
 $color-deep: #000000;
 $color-chalk: #dddddd;
+$color-beton: #bbbbbb;
 $color-dark: #999999;
