--- a/src/scss/mixins/colors-dark.scss
+++ b/src/scss/mixins/colors-dark.scss
@@ -6,5 +6,6 @@ $color-foreground: #dddddd;
 $color-high: rgba(0,0,0,0.7);
 $color-deep: #000000;
 $color-chalk: #222222;
+$color-beton: #bbbbbb;
 $color-dark: #555555;
 
