--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -12,12 +12,17 @@ body, html {
 
 body {
   &:before {
-
     position: absolute;
     opacity: 0;
-    top: 50%;
-    left: calc(50% - 30px);
-    transition: opacity 1s ease-in-out;
+    text-align: center;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    border-radius: 50px;
+    background-color: $color-high;
+    left: calc(50% - 50px);
+    top: calc(50% - 50px);
+    transition: all 1s ease-in-out;
     z-index: 10000;
   }
 
@@ -25,9 +30,21 @@ body {
     &:before {
       content: 'loading...';
       opacity: 1;
-      transition: opacity 1s ease-in-out;
-
+      transition: all 1s ease-in-out;
+      box-shadow: 0 0 200px $color-deep;
+      border: 2px solid $color-dark;
     }
+
+    &:after {
+      content: '*';
+      position: absolute;
+      width: 150px;
+      height: 150px;
+      left: calc(50% - 75px);
+      top: calc(50% - 75px);
+      color: $color-primary;
+    }
+
     .radar {
       opacity: 0;
       box-shadow: inset 0 0 200px rgba(0, 0, 0, 0);
