--- a/src/scss/dark.scss
+++ b/src/scss/dark.scss
@@ -22,6 +22,10 @@ body {
 }
 
 .radar {
+  background-image: url("/images/bg_dark_1.jpg");
+  background-size: cover;
+  box-shadow: inset 0 0 200px rgba(0, 0, 0, 1);
+
   .dot {
     border: none;
     &.active {
@@ -49,11 +53,12 @@ body {
   }
 
   .ring {
-    background-color: rgba(50, 80, 100, 0.2);
+    background-color: rgba(0, 20, 60, 0.25);
     border: 1px solid $color-dark;
 
     &:before {
-      color: $color-deep;
+      color: $color-foreground;
+      opacity:0.5;
     }
   }
 }
@@ -61,14 +66,20 @@ body {
 .menu {
   .inner {
     background-color: rgba(0, 0, 0, 0.9);
+    border-bottom-color:$color-secondary;
 
     .open {
       color: $color-foreground;
+      background-color: $color-secondary;
     }
 
     .dataset {
       a {
         color: $color-foreground;
+
+        &:hover {
+          color:$color-secondary;
+        }
       }
     }
   }
