--- a/src/scss/mixins/colors-dark.scss
+++ b/src/scss/mixins/colors-dark.scss
@@ -2,6 +2,10 @@ $color-primary: #E60023;
 $color-primary-dark: darken(desaturate($color-primary, 20%), 20%);
 $color-primary-light: lighten(desaturate($color-primary, 20%), 20%);
 
+$color-secondary: #104080;
+$color-secondary-dark: darken(desaturate($color-secondary, 20%), 20%);
+$color-secondary-light: lighten(desaturate($color-secondary, 20%), 20%);
+
 $color-foreground: #dddddd;
 $color-high: rgba(0,0,0,0.7);
 $color-deep: #000000;
