--- a/src/scss/mixins/typo.scss
+++ b/src/scss/mixins/typo.scss
@@ -1,29 +1,14 @@
-@font-face {
-  font-family: 'Exo';
-  font-weight: 200;
-  src: url('/css/fonts/Exo-Thin.ttf') format('truetype');
+@mixin font-face($style-name, $file, $family, $weight) {
+  $filepath: "/css/fonts/" + $family + "/" + $file;
+  @font-face {
+    font-family: "#{$style-name}";
+    font-weight: $weight;
+    src: url($filepath + ".woff2") format('woff2');
+  }
 }
 
-@font-face {
-  font-family: 'Exo';
-  font-weight: 300;
-  src: url('/css/fonts/Exo-Light.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Exo';
-  font-weight: 400;
-  src: url('/css/fonts/Exo-Medium.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Exo';
-  font-weight: 500;
-  src: url('/css/fonts/Exo-Bold.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Exo';
-  font-weight: 800;
-  src: url('/css/fonts/Exo-Black.ttf') format('truetype');
-}
+@include font-face('Exo', 'Exo-Thin', 'exo-webfont', 200);
+@include font-face('Exo', 'Exo-Light', 'exo-webfont', 300);
+@include font-face('Exo', 'Exo-Medium', 'exo-webfont', 400);
+@include font-face('Exo', 'Exo-Bold', 'exo-webfont', 500);
+@include font-face('Exo', 'Exo-Black', 'exo-webfont', 800);
