Use font-display swap for text rendering

--- a/src/scss/mixins/typo.scss
+++ b/src/scss/mixins/typo.scss
@@ -3,6 +3,7 @@
   @font-face {
     font-family: "#{$style-name}";
     font-weight: $weight;
+    font-display: swap;
     src: url($filepath + ".woff2") format('woff2');
   }
 }
