--- a/src/scss/dark.scss
+++ b/src/scss/dark.scss
@@ -59,6 +59,18 @@ body {
           a {
             &.active {
               color: $color-chalk;
+
+              span {
+                color: $color-foreground;
+              }
+            }
+
+            &.selected {
+              color: $color-chalk;
+
+              span {
+                color: $color-foreground;
+              }
             }
           }
         }
@@ -82,6 +94,10 @@ body {
     background-color: rgba(0, 0, 0, 0);
     border-bottom-color: $color-secondary;
     width: 400px;
+
+    .radar {
+      border-bottom-color: $color-chalk;
+    }
 
     .open {
       font-size: 16px;
