--- a/src/scss/mixins/colors-dark.scss
+++ b/src/scss/mixins/colors-dark.scss
@@ -6,9 +6,18 @@ $color-secondary: #104080;
 $color-secondary-dark: darken(desaturate($color-secondary, 20%), 20%);
 $color-secondary-light: lighten(desaturate($color-secondary, 20%), 20%);
 
+$color-green: #208030;
+$color-green-dark: darken(desaturate($color-green, 10%), 10%);
+$color-green-light: lighten(desaturate($color-green, 20%), 20%);
+
 $color-foreground: #dddddd;
 $color-high: rgba(0,0,0,0.7);
 $color-deep: #000000;
 $color-chalk: #222222;
 $color-beton: #bbbbbb;
 $color-dark: #555555;
+
+$color-ring0: #93c47d;
+$color-ring1: #93d2c2;
+$color-ring2: #fbdb84;
+$color-ring3: #efafa9;
