--- a/src/scss/components/radar.scss
+++ b/src/scss/components/radar.scss
@@ -22,8 +22,8 @@
     }
   }
 
-  @import "./components/dot.scss";
-  @import "./components/ring.scss";
-  @import "./components/quadrants.scss";
-  @import "./components/legends.scss";
+  @import "./dot.scss";
+  @import "./ring.scss";
+  @import "./quadrants.scss";
+  @import "./legends.scss";
 }
