Add indicator to legend for moving techs

--- a/src/module/Radar/Templates/LegendDot.html
+++ b/src/module/Radar/Templates/LegendDot.html
@@ -1,3 +1,3 @@
-<li>
+<li class="dot-moved-${dot.moved}">
     <a href="" data-index="${dot.index}"><span class="">${dot.index + 1}</span>${dot.label}</a>
 </li>
