Put our stuff in it, update js a little

--- a/docs/radar.css
+++ b/docs/radar.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Source Sans Pro', arial, helvetica, sans-serif;
-  padding-bottom: 50px;
+  padding: 10 10 50 10;
 }
 h3 {
   margin-top: 50px;
