--- a/docs/radar.css
+++ b/docs/radar.css
@@ -1,13 +1,39 @@
 body {
   font-family: 'Source Sans Pro', arial, helvetica, sans-serif;
-  padding: 10 10 50 10;
+  padding: 0;
+  margin: 0;
 }
-h3 {
-  margin-top: 50px;
+
+header {
+  background-color: rgba(2, 179, 136, 1);
+  padding: 10px;
 }
-li {
+
+header nav {
+  display: inline-block;
+  margin-left: 20px;
+  color: #fff;
+}
+
+header nav a {
+  color: #c3ecfe;
+}
+
+header nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+header nav ul li {
+  display: inline;
+  padding-left: 10px;
+}
+
+ul.documentation li {
   margin: 25px 50px 0 0;
 }
+
 table {
   width: 1400px;
   margin: 0 50px 0 50px;
