--- a/src/module/Radar/Templates/Description.html
+++ b/src/module/Radar/Templates/Description.html
@@ -1,56 +1,42 @@
-<h3>What is the Tech Radar?</h3>
-  <p>
-      The Neofonie Tech Radar is a list of technologies, complemented by an assessment result, called
-      <em>ring assignment</em>. We use four rings with the following semantics:
-  </p>
-  <ul>
-      <li>
-          <strong>ADOPT</strong>Technologies we have high confidence in to serve our purpose, also in large scale.
-          Technologies with a usage culture in our Neofonie production environment, low risk and recommended to
-          be widely used.
-      </li>
-      <li>
-          <strong>TRIAL</strong>Technologies that we have seen work with success in project work to solve a real
-          problem;
-          first serious usage experience that confirm benefits and can uncover limitations. TRIAL technologies
-          are slightly more risky; some engineers in our organization walked this path and will share knowledge
-          and experiences.
-      </li>
-      <li>
-          <strong>ASSESS</strong>Technologies that are promising and have clear potential value-add for us;
-          technologies
-          worth to invest some research and prototyping efforts in to see if it has impact. ASSESS technologies
-          have higher risks; they are often brand new and highly unproven in our organisation. You will find some
-          engineers that have knowledge in the technology and promote it, you may even find teams that have started
-          a prototyping effort.
-      </li>
-      <li>
-          <strong>HOLD</strong>Technologies not recommended to be used for new projects. Technologies that we think
-          are not (yet) worth to (further) invest in. HOLD technologies should not be used for new projects, but
-          usually can be continued for existing projects.
-      </li>
-  </ul>
-  <h3>What is the purpose?</h3>
-  <p>
-      The Tech Radar is a tool to inspire and support engineering teams at Neofonie to pick the best technologies for
-      new projects;
-      it provides a platform to share knowledge and experience in technologies, to reflect on technology decisions
-      and continuously evolve our technology landscape. Based on the
-      <a href="https://www.thoughtworks.com/radar">pioneering work of ThoughtWorks</a>, our Tech Radar sets out the
-      changes in technologies that are interesting
-      in software development — changes that we think our engineering teams should pay attention to and consider
-      using in their projects.
-  </p>
-  <h3>How do we maintain it?</h3>
-  <p>
-      The Tech Radar is maintained by some developers at Neofonie committed to devote time to the Tech Radar purpose.
-      The developers
-      self organise to maintain the Tech Radar documents, including this public version. Assignment of technologies
-      to rings is the outcome of ring change proposals, which are discussed and voted on in guild meetings. The
-      Tech Radar depends on active participation and input from all engineering teams at Neofonie.
-  </p>
-  <p>
-      <em>BTW, if you would like to create your own Tech Radar — Zalando has
-          <a href="https://github.com/zalando/tech-radar">open sourced the code</a> to generate this
-          visualization.</em>
-  </p>
+<h3>Was ist ein Tech Radar?</h3>
+<p>
+  Der Neofonie Tech Radar ist eine Liste von Technologien, die aktuell im
+  Einsatz sind.
+  Zudem zeigt er auf, in welcher Phase ihres Einsatzes sich eine gewisse
+  Technologie bei uns befindet. Diese Liste ist in ständigem Wandel und
+  beinhaltet nur die größten sich im Einsatz befindenden Libraries, Frameworks,
+  Tools und Techniken. Die jeweiligen Phasen lauten:
+</p>
+<ul>
+  <li>
+    <strong>ADOPT</strong>
+    Eine Technologie, welche bereits im Einsatz in produktiven Systemen ist und
+    welche weiter genutzt wird für neue Projekte.
+    Die Erfahrung in diesen Kategorien ist weitreichend und komplexe Systeme
+    können damit bestmöglich gebaut werden.
+    Unsere Go-To Technologien!
+  </li>
+  <li>
+    <strong>TRIAL</strong>
+    Beschreibt Technologien, die in Prototypen oder Testsystemen im Einsatz
+    sind.
+    Die Erfahrung mit diesen Technologien ist schon weit genug um größere
+    Projekte damit umsetzen zu können,
+    jedoch müssen noch weitere Tests durchgeführt werden, um die Zuverlässigkeit
+    sicher zu stellen.
+  </li>
+  <li>
+    <strong>ASSESS</strong>
+    Diese Technologien sind noch in der Anfangsphase bei der Neofonie.
+    Kleinere Tests wurden schon durchgeführt, jedoch kann noch nicht bestimmt
+    werden ob diese Tools bereit sind für produktive Systeme.
+    Sie werden weiterhin getestet und bewertet.
+  </li>
+  <li>
+    <strong>HOLD</strong>
+    Technologien, die früher im Einsatz in Produktivsystem waren, die allerdings
+    durch neuere, bessere Alternativen ersetzt wurden.
+    Es ist davon auszugehen, dass diese Technologien nicht in zukünftigen
+    Projekten zum Einsatz kommen werden.
+  </li>
+</ul>
